# TAAJsh-Custom-Linux-Shell

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  taaj.cpp
include/: command.hpp  flock.hpp  history.hpp  malware_detection.hpp  pipeline.hpp  signal_handler.hpp  utils.hpp
src/: CMakeLists.txt  command.cpp  flock.cpp  history.cpp  malware_detection.cpp  pipeline.cpp  signal_handler.cpp  utils.cpp
test/: flock_check.cpp  malware_external.cpp
